--- a/css/styles.css
+++ b/css/styles.css
@@ -273,8 +273,14 @@ body {
 .footer .container {
     display: flex;
     align-items: baseline;
+    justify-content: space-between;
 
 }
+
+/*.footer .container > div:nth-child(2) {*/
+/*    margin-left: 70px;*/
+/*    margin-right: 93px;*/
+
 
 .footer p {
     font-size: 14px;
@@ -310,6 +316,53 @@ body {
 
 .footer .social-icon {
     fill: #FFFFFF;
+}
+
+.footer button {
+    /*display: inline-block;*/
+    color: var(--color-light);
+    background-color: var(--color-accent);
+    font-weight: 700;
+    line-height: 1.88;
+    text-align: center;
+    letter-spacing: 0.06em;
+    border: 1px solid var(--color-accent);
+    border-radius: 4px;
+    min-width: 200px;
+    padding: 9px 62px 9px 29px;
+}
+
+.form-input {
+    display: inline-block;
+    width: 358px;
+    height: 50px;
+    background-color: #2F303A;
+    font-family: var(--ff-primary);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    padding-left: 16px;
+    margin-right: 12px;
+}
+
+.form-control {
+    display: inline-block;
+    position: relative;
+}
+
+.send-icon {
+    position: absolute;
+    top: 50%;
+    right: 30px;
+    transform: translateY(-50%);
+    margin-left: 12px;
 }
 
 /*=== End of Footer ===*/
@@ -824,7 +877,9 @@ h3 {
     background-color: #FFFFFF;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.14), 0 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+    padding: 40px;
 }
+
 
 .modal-close-btn {
     position: absolute;
@@ -840,4 +895,144 @@ h3 {
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0;
     cursor: pointer;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn:focus,
+.modal-close-btn:hover {
+    fill: #2196F3;
+}
+
+.contact-form b {
+    display: block;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    margin-bottom: 12px;
+
+}
+
+.form-control label {
+    display: block;
+
+}
+
+.contact-form-field span {
+    font-family: var(--ff-primary);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: #757575;
+}
+
+.form-field input,
+.form-control input {
+    display: block;
+    width: 100%;
+    height: 40px;
+    margin-bottom: 10px;
+    margin-top: 4px;
+    padding-left: 42px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+}
+
+.form-field-wrapper {
+    position: relative;
+}
+
+.form-field-wrapper svg {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 15px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-field textarea {
+    width: 100%;
+    height: 120px;
+    padding: 12px 16px;
+    margin-top: 4px;
+    margin-bottom: 20px;
+    resize: none;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+textarea::placeholder {
+    color: rgba(117, 117, 117, 0.5);
+}
+
+.form-field input:focus {
+    outline: none;
+    border-color: #2196F3;
+
+}
+
+.form-field textarea:focus {
+    outline: none;
+    border-color: #2196F3;
+}
+
+.form-field input:focus + svg {
+    fill: #2196F3;
+}
+
+.form-control-checkbox {
+    margin-bottom: 30px;
+}
+
+.contact-form-checkbox-label::before {
+    content: "";
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+    background-image: url("../images/svg/checkbox.svg");
+    cursor: pointer;
+    margin-right: 8px;
+
+}
+
+.contact-form-checkbox:checked + .contact-form-checkbox-label::before {
+    background-image: url("../images/svg/checked.svg");
+    background-color: #2196F3;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 2px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.14), 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.contact-form-checkbox-label {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+}
+
+.form-button {
+    display: block;
+    margin: 0 auto;
+    padding: 10px 55px;
+    background-color: #2196F3;
+    color: #FFFFFF;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.14), 0 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    border: none;
+}
+
+
+.contact-form-checkbox-wrapper {
+    margin-bottom: 30px;
 }
