--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@ body {
     right: 0;
     width: 100%;
     height: 4px;
-    background-color: #2196F3;
+    background-color: var(--color-accent);
     border-radius: 2px;
     opacity: 0;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -277,11 +277,6 @@ body {
 
 }
 
-/*.footer .container > div:nth-child(2) {*/
-/*    margin-left: 70px;*/
-/*    margin-right: 93px;*/
-
-
 .footer p {
     font-size: 14px;
     font-weight: bold;
@@ -304,9 +299,9 @@ body {
 
 .footer .social-list-item a:focus,
 .footer .social-list-item a:hover {
-    border: 1px solid #2196F3;
+    border: 1px solid var(--color-accent);
     border-radius: 50%;
-    background-color: #2196F3;
+    background-color: var(--color-accent);
 }
 
 .footer .social-list-item a:hover svg,
@@ -319,7 +314,7 @@ body {
 }
 
 .footer button {
-    /*display: inline-block;*/
+    display: inline-block;
     color: var(--color-light);
     background-color: var(--color-accent);
     font-weight: 700;
@@ -330,6 +325,12 @@ body {
     border-radius: 4px;
     min-width: 200px;
     padding: 9px 62px 9px 29px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer button:focus,
+.footer button:hover {
+    background-color: var(--focus-button);
 }
 
 .form-input {
@@ -337,6 +338,16 @@ body {
     width: 358px;
     height: 50px;
     background-color: #2F303A;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    padding-left: 16px;
+    margin-right: 12px;
+    color: white;
+}
+
+.form-input::placeholder {
     font-family: var(--ff-primary);
     font-style: normal;
     font-weight: 400;
@@ -344,12 +355,6 @@ body {
     line-height: 1.25;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    box-sizing: border-box;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    padding-left: 16px;
-    margin-right: 12px;
 }
 
 .form-control {
@@ -379,9 +384,7 @@ body {
     margin-left: auto;
     margin-right: auto;
 
-    background-image: linear-gradient(
-            rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)
-    ),
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url("../images/hero.jpg");
     background-size: cover;
     background-position: center;
@@ -646,7 +649,7 @@ h3 {
 
 .social-list-item a:focus,
 .social-list-item a:hover {
-    background-color: #2196F3;
+    background-color: var(--color-accent);
 }
 
 .social-list-item a:hover svg,
@@ -694,8 +697,8 @@ h3 {
 .clients-list-item:hover,
 .clients-list-item:focus {
     background-color: #FFFFFF;
-    color: #2196F3;
-    border-color: #2196F3;
+    color: var(--color-accent);
+    border-color: var(--color-accent);
 }
 
 .clients-icon {
@@ -707,7 +710,7 @@ h3 {
 
 .clients-icon:hover,
 .clients-icon:focus {
-    fill: #2196F3;
+    fill: var(--color-accent);
 }
 
 .clients-link {
@@ -900,7 +903,7 @@ h3 {
 
 .modal-close-btn:focus,
 .modal-close-btn:hover {
-    fill: #2196F3;
+    fill: var(--color-accent);
 }
 
 .contact-form b {
@@ -977,17 +980,17 @@ textarea::placeholder {
 
 .form-field input:focus {
     outline: none;
-    border-color: #2196F3;
+    border-color: var(--color-accent);
 
 }
 
 .form-field textarea:focus {
     outline: none;
-    border-color: #2196F3;
+    border-color: var(--color-accent);
 }
 
 .form-field input:focus + svg {
-    fill: #2196F3;
+    fill: var(--color-accent);
 }
 
 .form-control-checkbox {
@@ -1007,7 +1010,7 @@ textarea::placeholder {
 
 .contact-form-checkbox:checked + .contact-form-checkbox-label::before {
     background-image: url("../images/svg/checked.svg");
-    background-color: #2196F3;
+    background-color: var(--color-accent);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -1025,14 +1028,24 @@ textarea::placeholder {
     display: block;
     margin: 0 auto;
     padding: 10px 55px;
-    background-color: #2196F3;
+    background-color: var(--color-accent);
     color: #FFFFFF;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.14), 0 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
+.form-button:focus,
+.form-button:hover {
+    background-color: var(--focus-button);
+}
 
 .contact-form-checkbox-wrapper {
     margin-bottom: 30px;
+}
+
+.contact-form-checkbox-label a {
+    color: var(--color-accent);
 }
